// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The DialogManager component renders OUDimension content with display:none when previously mounted 1`] = `
<Fragment>
  <Modal
    data-test="dialog-manager"
    dataTest="dhis2-uicore-modal"
    large={true}
    onClose={[Function]}
    position="top"
  >
    <ModalTitle
      dataTest="dhis2-uicore-modaltitle"
    />
    <ModalContent
      dataTest="dhis2-uicore-modalcontent"
    >
      <div
        key="ou"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <OrgUnitDimension
          onSelect={[Function]}
          ouItems={Array []}
        />
      </div>
    </ModalContent>
    <ModalActions
      dataTest="dhis2-uicore-modalactions"
    >
      <ButtonStrip
        dataTest="dhis2-uicore-buttonstrip"
      >
        <HideButton
          onClick={[Function]}
        />
        <Connect(UpdateVisualizationContainer)
          renderComponent={[Function]}
        />
      </ButtonStrip>
    </ModalActions>
  </Modal>
</Fragment>
`;

exports[`The DialogManager component renders OUDimension content with display:none when previously mounted 2`] = `<Fragment />`;

exports[`The DialogManager component renders OUDimension content with display:none when previously mounted 3`] = `
<Fragment>
  <Modal
    data-test="dialog-manager"
    dataTest="dhis2-uicore-modal"
    large={true}
    onClose={[Function]}
    position="top"
  >
    <ModalTitle
      dataTest="dhis2-uicore-modaltitle"
    />
    <ModalContent
      dataTest="dhis2-uicore-modalcontent"
    >
      <div
        key="ou"
        style={
          Object {
            "display": "none",
          }
        }
      >
        <OrgUnitDimension
          onSelect={[Function]}
          ouItems={Array []}
        />
      </div>
      <DataDimension
        onSelect={[Function]}
        selectedDimensions={Array []}
      />
    </ModalContent>
    <ModalActions
      dataTest="dhis2-uicore-modalactions"
    >
      <ButtonStrip
        dataTest="dhis2-uicore-buttonstrip"
      >
        <HideButton
          onClick={[Function]}
        />
        <Connect(UpdateVisualizationContainer)
          renderComponent={[Function]}
        />
      </ButtonStrip>
    </ModalActions>
  </Modal>
</Fragment>
`;

exports[`The DialogManager component renders a closed dialog 1`] = `<Fragment />`;

exports[`The DialogManager component renders the DataDimension content in dialog 1`] = `
<Fragment>
  <Modal
    data-test="dialog-manager"
    dataTest="dhis2-uicore-modal"
    large={true}
    onClose={[Function]}
    position="top"
  >
    <ModalTitle
      dataTest="dhis2-uicore-modaltitle"
    />
    <ModalContent
      dataTest="dhis2-uicore-modalcontent"
    >
      <DataDimension
        onSelect={[Function]}
        selectedDimensions={Array []}
      />
    </ModalContent>
    <ModalActions
      dataTest="dhis2-uicore-modalactions"
    >
      <ButtonStrip
        dataTest="dhis2-uicore-buttonstrip"
      >
        <HideButton
          onClick={[Function]}
        />
        <Connect(UpdateVisualizationContainer)
          renderComponent={[Function]}
        />
      </ButtonStrip>
    </ModalActions>
  </Modal>
</Fragment>
`;

exports[`The DialogManager component renders the OrgUnitDimension content in dialog 1`] = `
<Fragment>
  <Modal
    data-test="dialog-manager"
    dataTest="dhis2-uicore-modal"
    large={true}
    onClose={[Function]}
    position="top"
  >
    <ModalTitle
      dataTest="dhis2-uicore-modaltitle"
    />
    <ModalContent
      dataTest="dhis2-uicore-modalcontent"
    >
      <div
        key="ou"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <OrgUnitDimension
          onSelect={[Function]}
          ouItems={Array []}
        />
      </div>
    </ModalContent>
    <ModalActions
      dataTest="dhis2-uicore-modalactions"
    >
      <ButtonStrip
        dataTest="dhis2-uicore-buttonstrip"
      >
        <HideButton
          onClick={[Function]}
        />
        <Connect(UpdateVisualizationContainer)
          renderComponent={[Function]}
        />
      </ButtonStrip>
    </ModalActions>
  </Modal>
</Fragment>
`;

exports[`The DialogManager component renders the PeriodDimension content in dialog 1`] = `
<Fragment>
  <Modal
    data-test="dialog-manager"
    dataTest="dhis2-uicore-modal"
    large={true}
    onClose={[Function]}
    position="top"
  >
    <ModalTitle
      dataTest="dhis2-uicore-modaltitle"
    />
    <ModalContent
      dataTest="dhis2-uicore-modalcontent"
    >
      <PeriodDimension
        onSelect={[Function]}
        selectedPeriods={Array []}
      />
    </ModalContent>
    <ModalActions
      dataTest="dhis2-uicore-modalactions"
    >
      <ButtonStrip
        dataTest="dhis2-uicore-buttonstrip"
      >
        <HideButton
          onClick={[Function]}
        />
        <Connect(UpdateVisualizationContainer)
          renderComponent={[Function]}
        />
      </ButtonStrip>
    </ModalActions>
  </Modal>
</Fragment>
`;
